--- a/Events.mediawiki
+++ b/Events.mediawiki
@@ -1,7 +1,7 @@
 Conferences, Events, Press/ News reports, Research papers, etc.. go here:
 
 == Conferences and Events ==
-* Stefan Karpinski's talk notes on [The Design Impact of Multiple Dispatch](http://nbviewer.ipython.org/b8fe9dbb36c1427b9f22) given at StrangeLoop-2013.
+* Stefan Karpinski's talk notes on "[http://nbviewer.ipython.org/b8fe9dbb36c1427b9f22 The Design Impact of Multiple Dispatch]" given at StrangeLoop-2013.
 * [https://github.com/ViralBShah/julia-presentations/tree/master/SPLASH-2013 Stefan, Jeff, and Viral's talk at ACM SPLASH 2013].
 
 == Research Papers ==
