restructuring is complete

--- a/Cookbook.mediawiki
+++ b/Cookbook.mediawiki
@@ -1,3 +1,4 @@
+
 == Cookbook ==
 
 * Errorbar_example.jl: in a [https://gist.github.com/gizmaa/7199563 github gist) and in an [http://nbviewer.ipython.org/7210792 ipython viewer]
@@ -7,8 +8,13 @@
 
 
 == Cheatsheets ==
+
 * [http://math.mit.edu/%7Estevenj/Julia-cheatsheet.pdf StevenJ's Julia cheatsheet]
 * John Myles White compares the [http://www.johnmyleswhite.com/notebook/2012/04/09/comparing-julia-and-rs-vocabularies/ Julia and "R" language syntax]
 * Cheatsheet for [https://github.com/tanmaykm/julia_types Julia Types]
 * [https://github.com/karbarcca/Rosetta-Julia Rosetta Code task implementations] for the Julia language.
+
+
+== IJulia notebooks ==
+* [A gallery of interesting Julia notebooks](https://github.com/ipython/ipython/wiki/A-gallery-of-interesting-IPython-Notebooks#julia-notebooks).
 
