--- a/README.mediawiki
+++ b/README.mediawiki
@@ -3,11 +3,14 @@ Curated bits and bytes of [https://github.com/JuliaLang Julia] language learning
 Inspired by pycrumbs on github, ALL things "Julia" are linked here. This is a WIP-repo and you are welcome to contribute (see below).
 
 == Topic Pages ==
+* [https://github.com/svaksha/julya/blob/master/Automation.mediawiki Automation]
 * [https://github.com/svaksha/julya/blob/master/Cookbook.mediawiki Cookbook]
 * [https://github.com/svaksha/julya/blob/master/Community.mediawiki Community]
+* [https://github.com/svaksha/julya/blob/master/Database.mediawiki Database]
 * [https://github.com/svaksha/julya/blob/master/Documentation.mediawiki Documentation]
 * [https://github.com/svaksha/julya/blob/master/Events.mediawiki Events, conferences, research papers,...]
-* [https://github.com/svaksha/julya/blob/master/LICENSE.mediawiki LICENSE]
+* [https://github.com/svaksha/julya/blob/master/GUI.mediawiki GUI]
+* [https://github.com/svaksha/julya/blob/master/IDE.mediawiki IDE]
 * [https://github.com/svaksha/julya/blob/master/MathStats.mediawiki Mathematics and Statistics]
 * [https://github.com/svaksha/julya/blob/master/Physics.mediawiki Physics]
 * [https://github.com/svaksha/julya/blob/master/QA.mediawiki QA]
@@ -18,8 +21,8 @@ Inspired by pycrumbs on github, ALL things "Julia" are linked here. This is a WI
 
 === Contributing ===
 
-* Depending on the topic, add your link (with notes) to the respective mediawiki file: say, JULYA.md, MathStats.md, Visualization.md, QA.md, ...
-* Send a Pull Request to https://github.com/svaksha/julya/pulls
+* As per the topic, add your link (with notes) to the respective mediawiki file above.
+* Then, send a Pull Request to https://github.com/svaksha/julya/pulls
 
 
 === LICENSE ===
