--- a/MathStats.mediawiki
+++ b/MathStats.mediawiki
@@ -17,6 +17,7 @@
 * The [http://juliastats.github.io/Distributions.jl/index.html Distributions] package.
 * The [http://juliastats.github.io/DataFrames.jl/io.html DataFrames manual section on IO]
 * [https://github.com/dmbates/MixedModels.jl GLMM]
+* [https://github.com/lindahua/DiscreteInference.jl Viterbi algorithm]
 
 
 == Operations Research ==
