--- a/Database.mediawiki
+++ b/Database.mediawiki
@@ -3,7 +3,10 @@
 
 * [https://github.com/msainz/Redis.jl Pure Julia implementation of a Redis client], largely based on redis-py.
 * [https://github.com/Lytol/Mongo.jl Mongo bindings] for the Julia programming language.
-* Julia interface to the [https://github.com/loladiro/SQLite.jl  SQLite library] and support for operations on DataFrames.
+* Julia interface to the [https://github.com/karbarcca/SQLite.jl  SQLite library] and support for operations on DataFrames.
+
+== IO interfaces ==
+* [https://github.com/karbarcca/NetCDF.jl  NetCDF support for a high-level and a medium-level interface for writing and reading netcdf files], for the Julia programming language.
 
 == DataFormats ==
 
