--- a/Database.mediawiki
+++ b/Database.mediawiki
@@ -1,10 +1,4 @@
 
-== NoSQL ==
-
-* [https://github.com/msainz/Redis.jl Pure Julia implementation of a Redis client], largely based on redis-py.
-* [https://github.com/Lytol/Mongo.jl Mongo bindings] for the Julia programming language.
-* Julia interface to the [https://github.com/karbarcca/SQLite.jl  SQLite library] and support for operations on DataFrames.
-
 == IO interfaces ==
 * [https://github.com/karbarcca/NetCDF.jl  NetCDF support for a high-level and a medium-level interface for writing and reading netcdf files], for the Julia programming language.
 
@@ -13,4 +7,14 @@
 * Julia Package for parsing the [https://github.com/loladiro/DWARF.jl DWARF file format].
 * [https://github.com/timholy/HDF5.jl HDF5.jl]
 * [https://github.com/JuliaLang/JSON.jl JSON parsing and printing].
+
+
+== NoSQL ==
+
+* [https://github.com/msainz/Redis.jl Pure Julia implementation of a Redis client], largely based on redis-py.
+* [https://github.com/Lytol/Mongo.jl Mongo bindings] for the Julia programming language.
+
+
+== RDBMS ==
+* Julia interface to the [https://github.com/karbarcca/SQLite.jl  SQLite library] and support for operations on DataFrames.
 
