--- a/Cookbook.mediawiki
+++ b/Cookbook.mediawiki
@@ -7,6 +7,7 @@
 * Windrose_Example.jl in a [https://gist.github.com/gizmaa/7199478 github gist] and in an [http:/nbviewer.ipython.org/7211059 ipython viewer]
 * [https://github.com/karbarcca/Rosetta-Julia Rosetta Code tasks] implemented in the Julia language.
 * [http://rosettacode.org/wiki/Binary_search#Julia Binary search in Julia]
+* [https://gist.github.com/gizmaa/7214002 Plotting Examples]
 
 == Cheatsheets ==
 
