--- a/MathStats.mediawiki
+++ b/MathStats.mediawiki
@@ -10,6 +10,7 @@
 * A hierarchy of [https://github.com/alrahimi/algebra/ abstract algebraic structures] in Julia.
 * [https://github.com/ViralBShah/SemiringAlgebra.jl Semiring Algebra]
 * [https://github.com/timholy/Cartesian.jl Cartesian.jl]: Fast multidimensional algorithms.
+* [https://github.com/johnmyleswhite/Calculus.jl Calculus.jl]
 * GaussQuadrature.jl: Another package that generates the [https://github.com/billmclean/GaussQuadrature.jl points and weights of the Gauss quadrature rules].
 * [https://github.com/andreasnoackjensen/IterativeLinearSolvers.jl IterativeLinearSolvers.jl]
 * JuMP.jl: [https://github.com/IainNZ/JuMP.jl Modelling language for Linear, Integer, and Quadratic Programming]
@@ -37,4 +38,5 @@
 * [https://github.com/dmbates/MixedModels.jl GLMM]
 * [https://github.com/lindahua/DiscreteInference.jl Viterbi algorithm]
 
-
+=== NLP ===
+* Julia package for [https://github.com/johnmyleswhite/TextAnalysis.jl text analysis].
