--- a/Community.mediawiki
+++ b/Community.mediawiki
@@ -7,4 +7,4 @@
 * The official [http://julialang.org/blog/ Julia language blog]
 * The [http://juliablogs.com/ Julia Planet]
 * [http://blog.leahhanson.us/drafts/julia-helps.html  Leah Hanson's blog post about helpful Julia functions (help, methods, etc..)]
-	
+* Using [http://iaindunning.com/2013/mip-callback.html JuMP to Solve a TSP with Lazy Constraints]	
