--- a/MathStats.mediawiki
+++ b/MathStats.mediawiki
@@ -2,7 +2,7 @@
 * Nettle is a [https://github.com/staticfloat/Nettle.jl  simple wrapper around libnettle, a cryptographic library].
 
 ==  Documentation ==
-* [http://docs.julialang.org/en/latest/manual/mathematical-operations/ Mathematical Operations]
+* [http://docs.julialang.org/en/release-0.2/manual/mathematical-operations/ Mathematical Operations] and a [https://github.com/JuliaLang/julia/blob/master/src/julia-parser.scm#L1-L19 list of all overloadable operators] in Julia.
 
 
 == Finance / Quant ==
