--- a/MathStats.mediawiki
+++ b/MathStats.mediawiki
@@ -14,6 +14,7 @@
 * [https://github.com/ViralBShah/SemiringAlgebra.jl Semiring Algebra]
 * [https://github.com/timholy/Cartesian.jl Cartesian.jl]: Fast multidimensional algorithms.
 * [https://github.com/johnmyleswhite/Calculus.jl Calculus.jl]
+* [https://github.com/natj/CellularAutomata.jl Cellular Automata] package.
 * A wrapper for [https://github.com/lruthotto/MUMPS MUMPS (a MUltifrontal Massively Parallel sparse direct Solver of large linear systems)] in Julia.
 * GaussQuadrature.jl: Another package that generates the [https://github.com/billmclean/GaussQuadrature.jl points and weights of the Gauss quadrature rules].
 * [https://github.com/andreasnoackjensen/IterativeLinearSolvers.jl IterativeLinearSolvers.jl]
